# GoGame

./: .gitignore  CMakeLists.txt  README.md  SetUpSFML.txt  run.bat  tempCodeRunnerFile.bat
include/: Board.h  Common.h  Game.h  GameUI.h  GameView.h  GoGUI.h  Menu.h
include/backend/: Board.h
src/: Board.cpp  CMakeLists.txt  Game.cpp  GameUI.cpp  GameView.cpp  GoGUI.cpp  main.cpp  run.bat  save.txt  test.cpp
src/backend/: Board.cpp
